# insight-spec

./: .env.virtuozzo.example  .gitignore  README.md  cleanup.sh  dev-up.sh  helmfile.yaml.gotmpl  init.sh  restart.sh  up.sh
.claude/skills/: connector-status.md
.github/workflows/: build-images.yml
charts/insight/: Chart.yaml  README.md  values.schema.json  values.yaml
cypilot/config/: artifacts.toml
deploy/: values-dev.yaml
deploy/airbyte/: README.md  values.yaml
deploy/argo/: README.md  rbac.yaml  values.yaml
deploy/gitops/: README.md  airbyte-application.yaml  argo-application.yaml  argo-rbac-application.yaml  insight-application.yaml  insight-values.example.yaml  insight-values.yaml
deploy/scripts/: install.sh  (+3 more)
docs/: CONNECTORS_REFERENCE.md  SPEC_REGISTRY.md
inbox/: CONNECTORS_REFERENCE.md
src/backend/services/analytics-api/: CLEAR-DESIGN.md  Cargo.toml  Dockerfile
src/backend/services/analytics-api/helm/: Chart.yaml  values.yaml
src/backend/services/analytics-api/helm/templates/: _helpers.tpl  deployment.yaml  secret.yaml  service.yaml
src/backend/services/analytics-api/specs/: DESIGN.md
src/backend/services/analytics-api/src/: auth.rs  config.rs  main.rs
src/backend/services/analytics-api/src/api/: handlers.rs  mod.rs
src/backend/services/analytics-api/src/domain/: mod.rs  query.rs  threshold.rs  view.rs
src/backend/services/analytics-api/src/infra/: mod.rs
src/backend/services/analytics-api/src/infra/cache/: mod.rs
src/backend/services/analytics-api/src/infra/db/: entities.rs  mod.rs
src/backend/services/analytics-api/src/infra/identity_resolution/: mod.rs
src/backend/services/analytics-api/src/migration/: m20260408_000001_create_views.rs  m20260408_000002_create_table_columns.rs  m20260414_000001_init.rs  m20260422_000001_seed_metrics.rs  m20260428_000001_collab_metrics_update.rs  m20260429_000001_task_delivery_silver_rewrite.rs  mod.rs
src/ingestion/connectors/crm/hubspot/: Dockerfile  README.md  descriptor.yaml  pyproject.toml
src/ingestion/connectors/crm/hubspot/dbt/: hubspot__crm_accounts.sql  hubspot__crm_activities.sql  hubspot__crm_contacts.sql  hubspot__crm_deals.sql  hubspot__crm_users.sql  schema.yml
src/ingestion/connectors/crm/hubspot/source_hubspot/: __init__.py  api.py  associations.py  constants.py  envelope.py  rate_limiting.py  source.py  spec.json  streams.py
src/ingestion/connectors/git/bitbucket-cloud/: descriptor.yaml  pyproject.toml
src/ingestion/connectors/git/bitbucket-cloud/dbt/: bitbucket_cloud__bronze_promoted.sql  bitbucket_cloud__commits.sql  bitbucket_cloud__file_changes.sql  bitbucket_cloud__pull_requests.sql  bitbucket_cloud__pull_requests_comments.sql  bitbucket_cloud__pull_requests_commits.sql  bitbucket_cloud__pull_requests_reviewers.sql  bitbucket_cloud__repositories.sql  bitbucket_cloud__repository_branches.sql  schema.yml
src/ingestion/connectors/git/bitbucket-cloud/source_bitbucket_cloud/: auth.py  source.py  spec.json
src/ingestion/connectors/git/bitbucket-cloud/source_bitbucket_cloud/streams/: base.py  branches.py  commits.py  file_changes.py  pull_requests.py  repositories.py
src/ingestion/connectors/git/github/: .dockerignore  Dockerfile  descriptor.yaml  pyproject.toml
src/ingestion/connectors/git/github/dbt/: github__commits.sql  github__file_changes.sql  github__pull_requests.sql  github__pull_requests_comments.sql  github__pull_requests_commits.sql  github__pull_requests_reviewers.sql  github__repositories.sql  github__repository_branches.sql
src/ingestion/connectors/git/github/source_github/: source.py  spec.json
src/ingestion/connectors/git/github/source_github/clients/: auth.py  concurrent.py  rate_limiter.py
src/ingestion/connectors/git/github/source_github/graphql/: queries.py
src/ingestion/connectors/git/github/source_github/streams/: base.py  branches.py  comments.py  commits.py  file_changes.py  pr_commits.py  pull_requests.py  repositories.py  reviews.py
src/ingestion/connectors/task-tracking/jira/enrich/: Cargo.toml  Dockerfile  README.md  build.sh
src/ingestion/connectors/task-tracking/jira/enrich/src/: main.rs
src/ingestion/connectors/task-tracking/jira/enrich/src/core/: jira.rs  mod.rs  tests.rs  types.rs
src/ingestion/connectors/task-tracking/jira/enrich/src/io/: ch_client.rs  mod.rs  reader.rs  schema.rs  writer.rs
(+515 files in other folders)
