[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "source-bitbucket-cloud-insight"
version = "0.2.0"
description = "Airbyte source connector for Bitbucket Cloud (CDK-native)"
requires-python = ">=3.10"
dependencies = [
    "airbyte-cdk>=7.16.0",
    "requests>=2.31.0",
    "pybloom-live>=4.0.0",
]

[project.scripts]
source-bitbucket-cloud-insight = "source_bitbucket_cloud.source:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["source_bitbucket_cloud*"]
