[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "source-github-insight"
version = "0.1.0"
description = "Airbyte source connector for GitHub (GraphQL + REST)"
requires-python = ">=3.10"
dependencies = [
    "airbyte-cdk>=0.80.0",
    "requests>=2.31.0",
]

[project.scripts]
source-github-insight = "source_github.source:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["source_github*"]
